# vdp

./: Cargo.toml  README.md
client_container/: Dockerfile  deploy_client.sh  fdpass-rs
client_container/async_client/: Cargo.toml
client_container/async_client/src/: main.rs
dpdk-sys/: build.rs
dpdk-sys/src/: bindings.h  lib.rs
dpdk_loop/: Cargo.toml
dpdk_loop/dpdk-sys/: Cargo.toml
dpdk_loop/dpdk-sys/src/: shim.c
dpdk_loop/l3engine/: Cargo.toml
dpdk_loop/l3engine/src/: main.rs
dpdk_loop/l3engine/src/apis/: mbuf.rs  memring.rs  mod.rs  port.rs
fdpass-rs/: Cargo.toml
fdpass-rs/examples/: receiver.rs  sender.rs
fdpass-rs/src/: ffi.rs  lib.rs
ipc-queue/: Cargo.toml
ipc-queue/src/: lib.rs
l3enginelib/: Cargo.toml
l3enginelib/src/: lib.rs  main.rs  rxbin.rs
l3enginelib/src/apis/: mbuf.rs  mempool.rs  memring.rs  port.rs
l3enginemux/: Cargo.toml
l3enginemux/src/: main.rs
l3enginemux/src/mux/: client.rs  fivetuple.rs  mod.rs
l3enginepacketiser/: Cargo.toml
l3enginepacketiser/src/: main.rs
l3enginepacketiser/src/net/: device.rs  mod.rs
l3enginepacketiser/src/packetiser/: mod.rs
memenpsf/: Cargo.toml
memenpsf/src/: lib.rs
