[package]
name = "l3enginemux"
version = "0.1.0"
authors = ["ratnadeepb <ratnadeep.bhattacharya1983@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
l3enginelib = { version = "0.2.0", path = "../l3enginelib" }
dpdk-sys = { version = "0.1.0", path = "../dpdk-sys" }
memenpsf = { version = "0.1.0", path = "../memenpsf" }
log = "0.4.11"
crossbeam = "0.8.0"
lazy_static = "1.4.0"
pnet = "0.27.2"
state = "0.4.2"
zmq = "0.9.2"
ctrlc = "3.1.7"
byteorder = "1.4.2"
anyhow = "1.0.38"
etherparse = "0.9.0"
thiserror = "1.0.23"
