[package]
name = "l3enginepacketiser"
version = "0.1.0"
authors = ["ratnadeepb <ratnadeep.bhattacharya1983@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
l3enginelib = { version = "0.1.0", path = "../l3enginelib" }
dpdk-sys = { version = "0.1.0", path = "../dpdk-sys" }
log = "0.4.11"
crossbeam-queue = "0.3.1"
chashmap = "2.2.2"
state = "0.4.2"
zmq = "0.9.2"
ctrlc = "3.1.7"
smoltcp = "0.7.0"
byteorder = "1.4.2"