[package]
name = "async_client"
version = "0.1.0"
authors = ["deep83"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shm_open_anonymous = "1.0.0"
fdpass = { path = "../fdpass-rs", version = "0.1.0" }
nix = "0.19.1"
async-std = "1.9.0"
ringbuf = "0.2.3"
libc = "0.2.84"