[package]
name = "dpdk-sys"
version = "0.1.0"
authors = ["ratnadeepb <ratnadeep.bhattacharya1983@gmail.com>"]
edition = "2018"
license = "Mozilla-2.0"
build = "build.rs"
links = "dpdk"
description = """DPDK FFI bindings for native libraries."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dpdk_sys"
doctest = false

[build-dependencies]
bindgen = "0.56.0"
cc = "1.0"
libc = "0.2"