[package]
name = "l3engine"
version = "0.2.0"
authors = ["ratnadeepb <ratnadeep.bhattacharya1983@gmail.com>"]
edition = "2018"
license = "Mozilla-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
dpdk-sys = { version = "0.1.0", path = "../dpdk-sys" }
anyhow = "1.0.36"
thiserror = "1.0.22"
libc = "0.2.81"
state = "0.4.2"
# chashmap = "2.2.2"
# signal-hook = "0.3.1"
log = "0.4.11"
# crossbeam-queue = "0.3.1"
zmq = "0.9.2"
ctrlc = "3.1.7"